tests/precess-tests/expectations/fail/summon_value.typ.expectation
#Contains
Unknown Type `T` in current context: `{}`